# aoc

./: Cargo.toml  README.md
2015/: .gitignore  README.md  gleam.toml  manifest.toml
2015/inputs/day03/: example.txt
2015/inputs/day06/: example.txt
2015/inputs/day07/: example.txt
2015/inputs/day12/: example.txt
2015/inputs/day16/: .gitkeep
2015/src/day01/: task1.gleam  task2.gleam
2015/src/day02/: task1.gleam  task2.gleam
2015/src/day03/: task1.gleam  task2.gleam
2015/src/day04/: task1.gleam  task2.gleam
2015/src/day05/: task1.gleam  task2.gleam
2015/src/day06/: task1.gleam  task2.gleam
2015/src/day07/: task1.gleam  task2.gleam
2015/src/day08/: task1.gleam  task2.gleam
2015/src/day09/: task1.gleam  task2.gleam
2015/src/day10/: task1.gleam  task2.gleam
2015/src/day11/: task1.gleam  task2.gleam
2015/src/day12/: task1.gleam  task2.gleam
2015/src/day13/: task1.gleam  task2.gleam
2015/src/day14/: task1.gleam  task2.gleam
2015/src/day15/: task1.gleam  task2.gleam
2015/src/day16/: task1.gleam  task2.gleam
2015/src/day17/: task1.gleam  task2.gleam
2015/src/day18/: task1.gleam  task2.gleam
2015/src/day19/: task1.gleam  task2.gleam
2015/src/day20/: task1.gleam  task2.gleam
2015/src/day21/: task1.gleam  task2.gleam
2015/src/day22/: task1.gleam  task2.gleam
2015/src/day23/: task1.gleam  task2.gleam
2015/src/day24/: task1.gleam  task2.gleam
2015/src/day25/: task.gleam
2016/: .gitignore  README.md  build.gradle.kts  run.java  settings.gradle.kts
2016/src/day01/task1/: Task1.java
2016/src/day01/task2/: Task2.java
2016/src/day02/task1/: Task1.java
2016/src/day02/task2/: Task2.java
2016/src/day03/task1/: Task1.java
2016/src/day03/task2/: Task2.java
2016/src/day04/task1/: Task1.java
2016/src/day04/task2/: Task2.java
2016/src/day05/task1/: Task1.java
2016/src/day05/task2/: Task2.java
2016/src/day06/task1/: Task1.java
2016/src/day06/task2/: Task2.java
2016/src/day07/task1/: Task1.java
2016/src/day07/task2/: Task2.java
2016/src/day08/task1/: Task1.java
2016/src/day08/task2/: Task2.java
2016/src/day09/task1/: Task1.java
2016/src/day09/task2/: Task2.java
2024/: .gitignore  Cargo.toml  README.md  bacon.toml
2024/solutions/day01/: task1.rs  task2.rs
2024/solutions/day03/: task2.rs
2024/src/day02/: task1.rs  task2.rs
2024/src/day03/: task1.rs
2024/src/day04/: task1.rs  task2.rs
2025/: .gitignore  Cargo.toml  README.md
2025/solutions/day01/: task1.rs  task2.rs
2025/solutions/day02/: task1.rs
2025/solutions/day03/: task2.rs
2025/solutions/day06/: task2.rs
2025/solutions/day07/: task1.rs  task2.rs
2025/solutions/day08/: task1.rs  task2.rs
2025/solutions/day09/: task1.rs
2025/solutions/day10/: task1.rs
2025/solutions/day11/: task1.rs  task2.rs
2025/solutions/day12/: task.rs  task1.rs
2025/src/day01/: task1.rs  task2.rs
2025/src/day02/: task1.rs  task2.rs
2025/src/day03/: task1.rs  task2.rs
2025/src/day04/: task1.rs  task2.rs
2025/src/day05/: task1.rs  task2.rs
2025/src/day06/: task1.rs  task2.rs
2025/src/day07/: task1.rs  task2.rs
2025/src/day08/: task1.rs  task2.rs
2025/src/day09/: task1.rs  task2.rs
2025/src/day10/: task1.rs  task2.rs
2025/src/day11/: task1.rs  task2.rs
2025/src/day12/: task.rs
src/: main.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs  structs.rs
src/day09/: cp.rs  mod.rs
src/day1/: mod.rs
src/day10/: mod.rs  structs.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
