bin = [
   { name = "day1-1", path = "solutions/day01/task1.rs" },
   { name = "day1-2", path = "solutions/day01/task2.rs" },
   { name = "day2-1", path = "solutions/day02/task1.rs" },
   { name = "day2-2", path = "solutions/day02/task2.rs" },
   { name = "day3-1", path = "solutions/day03/task1.rs" },
   { name = "day3-2", path = "solutions/day03/task2.rs" },
   { name = "day4-1", path = "solutions/day04/task1.rs" },
   { name = "day4-2", path = "solutions/day04/task2.rs" },
]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.4"
