bin = [
   { name = "day1-1", path = "src/day01/task1.rs" },
   { name = "day1-2", path = "src/day01/task2.rs" },
   { name = "day2-1", path = "src/day02/task1.rs" },
   { name = "day2-2", path = "src/day02/task2.rs" },
   { name = "day3-1", path = "src/day03/task1.rs" },
   { name = "day3-2", path = "src/day03/task2.rs" },
   { name = "day4-1", path = "src/day04/task1.rs" },
   { name = "day4-2", path = "src/day04/task2.rs" },
   { name = "day5-1", path = "src/day05/task1.rs" },
   { name = "day5-2", path = "src/day05/task2.rs" },
   { name = "day6-1", path = "src/day06/task1.rs" },
   { name = "day6-2", path = "src/day06/task2.rs" },
   { name = "day7-1", path = "src/day07/task1.rs" },
   { name = "day7-2", path = "src/day07/task2.rs" },
   { name = "day8-1", path = "src/day08/task1.rs" },
   { name = "day8-2", path = "src/day08/task2.rs" },
   { name = "day9-1", path = "src/day09/task1.rs" },
   { name = "day9-2", path = "src/day09/task2.rs" },
   { name = "day10-1", path = "src/day10/task1.rs" },
   { name = "day10-2", path = "src/day10/task2.rs" },
   { name = "day11-1", path = "src/day11/task1.rs" },
   { name = "day11-2", path = "src/day11/task2.rs" },
   { name = "day12", path = "src/day12/task.rs" },
]

[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
